# fa-dae2-capstone-Tran-Quoc-Dat-Nguyen

./: README.md  main.py  pyproject.toml  requirements.txt
config/: env_example.txt
docs/: project-spec.md
docs/architecture/: TECHNOLOGY_CHOICES.md  architecture.md  data-flow.md  technology-decision.md
docs/data-source/: batch-source-validation.md  stream-source-validation.md
docs/research/: data_source_validation.md
postgres-lab/: docker-compose.yml  main.py  pyproject.toml
postgres-lab/scripts/database/: connection_test.py  crud_demo.py
postgres-lab/sql/: init.sql
scripts/: config.py
scripts/data_collection/: api_collector.py  fake_data_generator.py  lastfm_api_collector.py  spotify_api_collector.py  test_api_collector.py
