[project]
name = "fa-dae2-capstone-tran-quoc-dat-nguyen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.6.0",
    "kagglehub>=0.3.13",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "stripe>=12.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
